<resources>
    <string name="app_name">MyEventApp</string>
    <string name="login">Login</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="calendar">Calendar</string>
    <string name="events">Events</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="good_morning">Good morning</string>
    <string name="you_have_nothing">You have nothing</string>
    <string name="scheduled_for_today">scheduled for today.</string>
    <string name="enjoy_your_day">Enjoy your day!</string>
    <string name="add">Add</string>
    <string name="ex_coffee">Ex: Coffee</string>
    <string name="ex_work_meeting">Ex: Work meeting</string>
    <string name="_00_00">00:00</string>
    <string name="time">Time</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="new_event">New Event</string>
</resources>