<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EventAddFragment">

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="254dp"
        android:layout_height="119dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="78dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/ex_work_meeting"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColorHint="#A1887F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/etDate"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="293dp"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvDescription"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="254dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="78dp"
        android:ems="10"
        android:hint="@string/ex_coffee"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#A1887F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/etDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="287dp"
        android:text="@string/time"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etTime"
        app:layout_constraintTop_toBottomOf="@+id/etDate" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="291dp"
        android:text="@string/date"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvTime"
        app:layout_constraintTop_toBottomOf="@+id/etDescription" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="231dp"
        android:text="@string/description"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etTime"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/_00_00"
        android:importantForAutofill="no"
        android:inputType="time"
        android:minHeight="48dp"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTime"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="78dp"
        android:ems="10"
        android:hint="@string/dd_mm_yyyy"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="#A1887F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etTime"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/save"
        android:text="@string/save"
        app:icon="@drawable/ic_outline_save_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>